--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-    <title>My Web Page</title>
+    <title>Pagina Desiree Martinez</title>
 </head>
 <body>
 <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
     <div class="container-fluid">
         <div class="mx-4">
-            <a class="navbar-brand" href="#">My Web Page</a>
+            <a class="navbar-brand" href="#">pagina Desiree Martinez</a>
         </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
@@ -42,20 +42,17 @@
         </div>
         <div class="col-lg mx-2 align-self-center">
             <div class="my-3">
-                <h1 class="text-center">I'm a Web Developer</h1>
-                <p>As a passionate software developer, I am deeply enthusiastic about creating and
-                    developing software applications. I am constantly learning and experimenting with new
-                    technologies and approaches, and I have a strong desire to create innovative and effective
-                    solutions to complex problems. I am driven by my curiosity and love for problem-solving, and
-                    I
-                    am committed to producing high-quality, well-designed software that meets the needs of
-                    users.
+                <h1 class="text-center">Desiree Martinez</h1>
+                <p>Mi chiamo Desiree Martinez ho 16 anni e frequento l'istituto I.I.S Verona trento indirizzo informatica.
+                Sono una ragazza che durante il tempo libero ama uscire,leggere,ascoltare musica e fare nuove amicizie ogni giorno. In questo pagina parlerò dell'argomento che mi ha colpito e appassionato di piu'in tutto l'anno.
                 </p>
             </div>
         </div>
     </div>
 </div>
-<div class="my-4">
+
+<!--
+  <div class="my-4">
 	<div class="text-center mb-4">
     	<h1>My Skills</h1>
 	</div>
@@ -92,6 +89,7 @@
     	</div>
 	</div>
 </div>
+-->
 
   <a name="projects">
   <div class="my-4">
@@ -100,13 +98,14 @@
     </div>
     <div class="container" style="align-content: center;">
        <!-- Carousel -->
-<div id="demo" class="carousel slide" data-bs-ride="carousel">
+    
+       <div id="demo" class="carousel slide" data-bs-ride="carousel">
 
   <!-- Indicators/dots -->
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
-    <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
-    <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+   <!-- <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+    <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>-->
   </div>
   
   <!-- The slideshow/carousel -->
@@ -114,11 +113,12 @@
     <div class="carousel-item active">
       <img src="img/progetto1.jpg" alt="Los Angeles" class="d-block" style="width:100%">
       <div class="carousel-caption bg-dark" style="--bs-bg-opacity: .5;">
-        <a class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="capolavoro/arduino.html"><h5>First slide label</h5>
-        <p>Some representative placeholder content for the first slide.</p></a>
+        <a class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="capolavoro/commedia.html"><h5>La Divina Commedia</h5>
+        <p>La grande opera di Dante Alighieri</p></a>
       </div>
     </div>
-    <div class="carousel-item">
+    
+    <!-- <div class="carousel-item">
         <img src="img/progetto2.png" alt="Chicago" class="d-block" style="width:100%">
         <div class="carousel-caption bg-dark" style="--bs-bg-opacity: .5;">
           <a class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="capolavoro/cpp.html"><h5>Second slide label</h5>
@@ -133,7 +133,7 @@
         <p>Some representative placeholder content for the third slide.</p></a>
       </div>
     </div>
-  
+  -->
   </div>
   
   <!-- Left and right controls/icons -->
