--- a/capolavoro/commedia.html
+++ b/capolavoro/commedia.html
@@ -47,6 +47,8 @@
             <div class="my-3">
                 <h1 class="text-center">La Divina Commedia</h1>
                 <p>La divina commedia è un poema di Dante Alighieri scritto in terzine e in lingua volgare fiorentina. La divina commedia è divisa in tre parti: Inferno,Purgatorio e Pardiso.Si tratta di un viaggio immaginario che lo porterà alla visione della Trinità.Ho scelto questo argomento perchè è pieno di avventure,di canti con versi fantastici e per il modo in cui parla Dante dell'amore che prova per Beatrice.
+                    L'inferno è il primo dei 3 canti dove Dante lo apre con un canto introduttivo, nel quale il poeta racconta in prima persona dello smarrimento spirituale e dell'icontro con Virgilio che lo accompagnerà durante il suo viaggio nelle 3 cantiche.
+                    I genitori di Dante sono,Alighiero 2 degli Alighieri e di Bella degli abati, nasce a Fienze nel mese di maggio o giugno del 1265, in una famiglia nobile. nel 
                 </p>
             </div>
         </div>
