--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   <!-- The slideshow/carousel -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img/progetto1.jpg" alt="Los Angeles" class="d-block" style="width:100%">
+      <img src="img/dante.jpg" alt="Los Angeles" class="d-block" style="width:100%">
       <div class="carousel-caption bg-dark" style="--bs-bg-opacity: .5;">
         <a class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="capolavoro/commedia.html"><h5>La Divina Commedia</h5>
         <p>La grande opera di Dante Alighieri</p></a>
@@ -161,8 +161,8 @@
         <div class="card" style="width: 25rem;">
          <img src="img/guitar.jpeg" class="card-img-top" alt="music">
           <div class="card-body">
-            <h5 class="card-title">Music</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <h5 class="card-title">Musica</h5>
+            <p class="card-text">Non ho un genere di musica,ne ascolto di tutti i tipi,ma ho un debole per la musica spagnola e per il reggaeton.</p>
           </div>
           </div>
       </div>
@@ -171,8 +171,8 @@
       <div class="card" style="width: 25rem;">
         <img src="img/basket.jpeg" class="card-img-top" alt="sport">
         <div class="card-body">
-          <h5 class="card-title">Sport</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h5 class="card-title">Leggere</h5>
+          <p class="card-text">Amo leggere i libri horror e i romanzi.</p>
         </div>
       </div>
       </div>
@@ -181,8 +181,8 @@
       <div class="card" style="width: 25rem;">
         <img src="img/skate.jpeg" class="card-img-top" alt="skate">
         <div class="card-body">
-          <h5 class="card-title">Adventure</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h5 class="card-title">Passeggiare</h5>
+          <p class="card-text">Amo stare in giro a divertirmi,uscire con gli amici e prendere aria fresca.</p>
         </div>
       </div>
       </div>
