--- a/capolavoro/commedia.html
+++ b/capolavoro/commedia.html
@@ -15,7 +15,7 @@
 <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
     <div class="container-fluid">
         <div class="mx-4">
-            <a class="navbar-brand" href="../index.html">Martinez</a>
+            <a class="navbar-brand" href="../index.html">Desiree Martinez</a>
         </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
@@ -48,7 +48,10 @@
                 <h1 class="text-center">La Divina Commedia</h1>
                 <p>La divina commedia è un poema di Dante Alighieri scritto in terzine e in lingua volgare fiorentina. La divina commedia è divisa in tre parti: Inferno,Purgatorio e Pardiso.Si tratta di un viaggio immaginario che lo porterà alla visione della Trinità.Ho scelto questo argomento perchè è pieno di avventure,di canti con versi fantastici e per il modo in cui parla Dante dell'amore che prova per Beatrice.
                     L'inferno è il primo dei 3 canti dove Dante lo apre con un canto introduttivo, nel quale il poeta racconta in prima persona dello smarrimento spirituale e dell'icontro con Virgilio che lo accompagnerà durante il suo viaggio nelle 3 cantiche.
-                    I genitori di Dante sono,Alighiero 2 degli Alighieri e di Bella degli abati, nasce a Fienze nel mese di maggio o giugno del 1265, in una famiglia nobile. nel 
+                    I genitori di Dante sono,Alighiero 2 degli Alighieri e di Bella degli abati, nasce a Fienze nel mese di maggio o giugno del 1265, in una famiglia nobile.
+                    La Vita Nuova è la prima opera di Dante, scritta tra il 1292 e il 1294 è un prosimetro dove sono inserite 32 liriche in una cornice di 42 capitoli, l'opera è scritta in lingua volgare fiorentina.
+                    Dante fu un poeta e prosatore,teorico e letterario pensatore politico considerato anche il padre della letteratura italiana.
+                    Dante morì tra la notte del 13\14 settembre del 1321 a Ravenna.  
                 </p>
             </div>
         </div>
