--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
   <footer class="footer mt-auto py-3 bg-light">
     <div class="container">
-      <span class="text-muted">© 2024 Mario Rossi. IIS Verona Trento, Messina.</span>
+      <span class="text-muted">© 2024 Desiree Martinez. IIS Verona Trento, Messina.</span>
     </div>
   </footer> 
 
