--- a/capolavoro/commedia.html
+++ b/capolavoro/commedia.html
@@ -39,7 +39,7 @@
 
   
 
-<img src="../img/hand2.png" class="img-fluid" alt="Responsive image">
+<img src="../img/divinacommedia.jpg" class="img-fluid" alt="Responsive image">
 
 <div class="container">
     <div class="row justify-content-center">
