--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <div class="container my-4">
     <div class="row justify-content-center">
         <div class="col-lg mb-lg-4">
-            <img src="img/hand.jpg" class="img-fluid" alt="" srcset="">
+            <img src="img/veronatrento.jpg" class="img-fluid" alt="" srcset="">
         </div>
         <div class="col-lg mx-2 align-self-center">
             <div class="my-3">
@@ -159,7 +159,7 @@
       <div class="row">
       <div class="col-sm-4">
         <div class="card" style="width: 25rem;">
-         <img src="img/guitar.jpeg" class="card-img-top" alt="music">
+         <img src="img/musica.webp" class="card-img-top" alt="music">
           <div class="card-body">
             <h5 class="card-title">Musica</h5>
             <p class="card-text">Non ho un genere di musica,ne ascolto di tutti i tipi,ma ho un debole per la musica spagnola e per il reggaeton.</p>
@@ -169,7 +169,7 @@
       <div class="col-sm-4">
 
       <div class="card" style="width: 25rem;">
-        <img src="img/basket.jpeg" class="card-img-top" alt="sport">
+        <img src="img/leggere.webp" class="card-img-top" alt="sport">
         <div class="card-body">
           <h5 class="card-title">Leggere</h5>
           <p class="card-text">Amo leggere i libri horror e i romanzi.</p>
@@ -179,7 +179,7 @@
       <div class="col-sm-4">
 
       <div class="card" style="width: 25rem;">
-        <img src="img/skate.jpeg" class="card-img-top" alt="skate">
+        <img src="img/passeggiare.webp" class="card-img-top" alt="skate">
         <div class="card-body">
           <h5 class="card-title">Passeggiare</h5>
           <p class="card-text">Amo stare in giro a divertirmi,uscire con gli amici e prendere aria fresca.</p>
